--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="status-bar__column">
-            <span>110%</span>
+            <span>100%</span>
             <i class="fas fa-battery-three-quarters fa-lg"></i>
             <i class="fas fa-bolt fa-lg"></i>
         </div>
@@ -35,9 +35,9 @@
                </p>
     </header>
 
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number" />
-        <input type="pass" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+        <input name="username" type="text" placeholder="Email or phone number" />
+        <input name="password"  type="pass" placeholder="Password" />
         <input type="submit" value="Log In" />
 
         <a href="#">Find Kokoa Account or Passsword</a>
