--- a/friends.html
+++ b/friends.html
@@ -39,19 +39,44 @@
       Friends' names Display
       <i class="fas fa-chevron-right fa-sm"></i>
     </a>
-
-    <div class="user-component">
-      <div class="usercomponent_column">
-        <img
-          src="https://avatars.githubusercontent.com/u/87510790?s=400&u=bac9794062584d8e6cb9b6f639d21ee695f375d3&v=4"
-          class="user-component_avatar"
-        />
-        <div class="usercomponent_text">
-          <h4 class="user-component_title">Lee Yeong Rok</h4>
+    <main class="friend-screen">
+      <div class="user-component">
+        <div class="usercomponent_column">
+          <img
+            src="https://avatars.githubusercontent.com/u/87510790?s=400&u=bac9794062584d8e6cb9b6f639d21ee695f375d3&v=4"
+            class="user-component_avatar user-component_avatar--xl"
+          />
+          <div class="usercomponent_text">
+            <h4 class="user-component_title">Lee Yeong Rok</h4>
+            <!--<h6 class="user-component_subtitle">오백맨 소백맨</h6>-->
+          </div>
+        </div>
+        <div class="usercomponent_column"></div>
+      </div>
+      <div class="friends-screen_chennel">
+        <div class="friend-screen_chennel-header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="usercomponent_column">
+            <img
+              src="https://avatars.githubusercontent.com/u/87510790?s=400&u=bac9794062584d8e6cb9b6f639d21ee695f375d3&v=4"
+              class="user-component_avatar user-component_avatar--sm"
+            />
+            <div class="usercomponent_text">
+              <h4 class="user-component_title user-component_title--not-bold">
+                chennel
+              </h4>
+              <!--<h6 class="user-component_subtitle">오백맨 소백맨</h6>-->
+            </div>
+          </div>
+          <div class="usercomponent_column">
+            <span>5<i class="fas fa-chevron-right fa-xs"></i></span>
+          </div>
         </div>
       </div>
-      <div class="usercomponent_column"></div>
-    </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav_list">
