--- a/chats.html
+++ b/chats.html
@@ -20,8 +20,10 @@
 
       <div class="status-bar__column">
         <span>83%</span>
-        <i class="fas fa-battery-three-quarters fa-lg"></i>
-        <i class="fas fa-bolt fa-lg"></i>
+        <div class="status-bar__column_ioncs">
+         <i class="fas fa-battery-three-quarters fa-lg"></i>
+         <i class="fas fa-bolt fa-lg"></i>
+        </div>
       </div>
     </div>
 
