--- a/find.html
+++ b/find.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chats - KoKoa clone</title>
+    <title>Find - KoKoa clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -20,8 +20,10 @@
 
       <div class="status-bar__column">
         <span>83%</span>
-        <i class="fas fa-battery-three-quarters fa-lg"></i>
-        <i class="fas fa-bolt fa-lg"></i>
+        <div class="status-bar__column_ioncs">
+         <i class="fas fa-battery-three-quarters fa-lg"></i>
+         <i class="fas fa-bolt fa-lg"></i>
+        </div>
       </div>
     </div>
 
@@ -38,25 +40,25 @@
     <main class="main-screens">
         <div class="find-icons">
             <div class="find-icons_icon">
-                <i class="fas fa-qrcode"></i>
+                <i class="fas fa-qrcode fa-lg"></i>
                 <span>QR Code</span>
             </div>
 
 
             <div class="find-icons_icon">
-                <i class="far fa-address-book"></i>
+                <i class="far fa-address-book fa-lg"></i>
                 <span>Add by contacts</span>
             </div>
 
 
             <div class="find-icons_icon">
-                <i class="fas fa-fingerprint"></i>
+                <i class="fas fa-fingerprint fa-lg"></i>
                 <span>Add by ID</span>
             </div>
 
 
             <div class="find-icons_icon">
-                <i class="far fa-envelope"></i>
+                <i class="far fa-envelope fa-lg"></i>
                 <span>Invite</span>
             </div>
         </div>
