--- a/friends.html
+++ b/friends.html
@@ -20,10 +20,13 @@
 
       <div class="status-bar__column">
         <span>83%</span>
-        <i class="fas fa-battery-three-quarters fa-lg"></i>
-        <i class="fas fa-bolt fa-lg"></i>
+        <div class="status-bar__column_ioncs">
+         <i class="fas fa-battery-three-quarters fa-lg"></i>
+         <i class="fas fa-bolt fa-lg"></i>
+        </div>
       </div>
     </div>
+
 
     <header class="screen-header">
       <h1 class="screen-header_title">Friends</h1>
